--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Parkeerplaats Game</title>
 </head>
 <body>
-  <h1>Parkeerplaats PBP</h1>
+  <h1>Parkeerplaats PBP!</h1>
   <canvas id="game" width="400" height="400" style="border:1px solid #000;"></canvas>
   <script>
     const canvas = document.getElementById('game')
